feat(backend): define and seed database schema

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -25,5 +25,5 @@
     "resolveJsonModule": true,
     "allowJs": true
   },
-  "include": ["src", "prisma.config.ts"]
+  "include": ["src", "prisma.config.ts", "prisma"]
 }
