feat(backend) : implement unit and integration tests

--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "commonjs",
     "target": "esnext",
 
-    "types": ["node"],
+    "types": ["node", "jest"],
     "lib": ["esnext"],
 
     "sourceMap": true,
