--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "seed": "dotenv -e .env -- ts-node prisma/seed.ts",
-    "dev": "dotenv -e .env -- nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/infrastructure/server/index.ts"
+    "dev": "dotenv -e .env -- nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/infrastructure/server/index.ts",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "comrade47",
@@ -19,10 +21,15 @@
   },
   "devDependencies": {
     "@types/express": "^5.0.5",
+    "@types/jest": "^30.0.0",
     "@types/node": "^24.10.0",
+    "@types/supertest": "^6.0.3",
     "dotenv-cli": "^11.0.0",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.19.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   }
